fix: adjust spacing between message border and drawer - MEED-8526 - Meeds-io/MIPs#163

--- a/webapp/src/main/webapp/css/matrix.less
+++ b/webapp/src/main/webapp/css/matrix.less
@@ -240,7 +240,6 @@
       background-color: #476A9C;
       color: #FFFFFF;
       max-width: 340px;
-      min-width: 340px;
     }
     .my-message-text i{
       color: #FFFFFF;
@@ -249,13 +248,12 @@
     .others-message-text {
       background-color: @primaryBackground;
       max-width: 328px;
-      min-width: 328px;
     }
     .others-message-text i {
       color: #20282c;
     }
     .others-audio-message {
-      min-width: 304px;
+      min-width: 299px;
     }
     .my-audio-message {
       min-width: 320px;
